[package]
name = "arborist-git"
description = "A CLI tool to delete local git branches"
version = "0.1.1"
authors = ["Andrew Mitchell <andrewpmitchell7@gmail.com>"]
license = "MIT OR Apache-2.0"
readme = "README.md"
homepage = "https://github.com/mitch292/arborist"
repository = "https://github.com/mitch292/arborist"
edition = "2018"
keywords = ["cli", "git", "branch", "delete"]
categories = ["command-line-utilities"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
git2 = "0.13"
thiserror = "1.0"
crossterm = "0.19.0"
chrono = "0.4.19"